Basic css framing

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,8 @@
-<p>footer works!</p>
+<footer class="foot">
+  <div class="authority">
+    <p class="authority__webmaps">Maps powered by <a class="authority__library" href="https://github.com/felixpalmer/procedural-gl-js" target="_blank"
+      title="jslibrary">procedural-gl-js</a></p>
+    <p class="authority__copyright">Copyright {{varYear}} - <a class="authority__link" href="https://twitter.com/elanio_herrador" target="_blank"
+      title="authortwitter">@elanio_herrador</a></p>
+  </div>
+</footer>
