--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,7 +18,7 @@
   }
 
   &__canvas {
-    background-color: orange;
+    //background-color: orange;
     width: 100%;
     height: 90vh;
     overflow-y: hidden;
